--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Bootstrap
 app/bootstrap*
+.idea/*
 
 # Symfony directories
 vendor/*
@@ -13,3 +14,5 @@ web/img/*
 # Configuration files
 app/config/parameters.ini
 app/config/parameters.yml
+
+.gitignore
